--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <main class="page-content">
         <section class="task-list-wrapper">
-          <h2 class="list-title">Tasks To Do</h2>
-          <ul class="task-list">
-            <li class="task-item">A task is going to be added soon!</li>
+            <h2 class="list-title">Tasks To Do</h2>
+            <ul class="task-list" id="tasks-to-do">
+              <li class="task-item">A task is going to be added soon!</li>
           </ul>
         </section>
       </main>
