--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   </header>
 
   <main class="page-content" id="page-content">
-
-    <!--Tasks to do-->
+    <!-- Tasks To Do -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
       <ul class="task-list" id="tasks-to-do"></ul>
     </section>
+
     <!-- Tasks In Progress -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks In Progress</h2>
@@ -60,3 +60,4 @@
 </body>
 
 </html>
+
